--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cyber Guide | Plateforme defensive Blue Team</title>
+    <title>Cyber Guide | Cybersecurite operationnelle</title>
     <meta
       name="description"
-      content="Cyber Guide centralise analyses, templates et outils defensifs pour equipes Blue Team."
+      content="Cyber Guide centralise analyses, templates et outils defensifs pour les equipes cybersecurite operationnelle."
     />
     <meta name="robots" content="index, follow" />
     <meta name="theme-color" content="#0B1F3B" />
     <meta name="author" content="Cyber Guide" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Cyber Guide | Plateforme defensive Blue Team" />
+    <meta property="og:title" content="Cyber Guide | Cybersecurite operationnelle" />
     <meta
       property="og:description"
       content="Bibliotheque d'analyses cyber, procedures operationnelles et outillage defensif."
@@ -20,10 +20,10 @@
     <meta property="og:image" content="/assets/cyberguide-brand.jpg" />
     <meta property="og:locale" content="fr_FR" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Cyber Guide | Securite operationnelle Blue Team" />
+    <meta name="twitter:title" content="Cyber Guide | Cybersecurite operationnelle" />
     <meta
       name="twitter:description"
-      content="Analyses, templates et outils Blue Team pour renforcer la defense operationnelle."
+      content="Analyses, templates et outils pour renforcer la cybersecurite operationnelle."
     />
     <meta name="twitter:image" content="/assets/cyberguide-brand.jpg" />
     <link
